--- a/src/pages/adminPage/admin.css
+++ b/src/pages/adminPage/admin.css
@@ -1,3 +1,9 @@
+.admin-content{
+    padding-bottom: 30px;
+}
+
+
+
 .admin-manage{
     position: relative;
     top: 200px;
